--- a/11.5.html
+++ b/11.5.html
@@ -8,7 +8,39 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="col1">
+
+        </div>  
+        <div class="col2">
+            <div class="tab1">
+                #Main
+            </div>
+            <div class="tab2">
+                #Aside
+            </div>
+        </div>
+        <div class="col3">
+            <div class="tab3">
+                .column 1
+            </div>
+            <div class="tab4">
+                .column 2
+            </div>
+            <div class="tab5">
+                .column 3
+            </div>
+        </div>
+        <div class="col4">
+            <div class="tab6">
+                .column 4
+            </div>
+            <div class="tab7">
+                .column 5
+            </div>
+            <div class="tab8">
+                .column 6
+            </div>
+        </div>
     </div>
 </body>
 </html>
